[package]
name = "hypermap-cacher"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
alloy-primitives = "0.8.15"
alloy-sol-types = "0.8.15"
chrono = "0.4.41"
hex = "0.4.3"
hyperware_process_lib = { version = "1.0.4", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
